kitten/reported_bugs/rust/rust-86188/stderr.txt
error[E0425]: cannot find value `tx` in this scope

 --> mutant.rs:6:10

  |

6 | let tx = tx ;

  |          ^^ not found in this scope



error[E0572]: return statement outside of function body

 --> mutant.rs:2:13

  |

2 | | _ : [ _ ; return || { } ] | { } ;

  |             ^^^^^^^^^^^^^



error[E0572]: return statement outside of function body

 --> mutant.rs:3:9

  |

3 | [ ( ) ; return || { } ] ;

  |         ^^^^^^^^^^^^^



error[E0572]: return statement outside of function body

 --> mutant.rs:4:9

  |

4 |   [ ( ) ; return | ice | move || -> ( ) {

  |  _________^

5 | | loop {

6 | | let tx = tx ;

7 | | tx . send ( 1 ) ;

8 | | }

9 | | } ] ;

  | |_^



error: internal compiler error: compiler/rustc_typeck/src/check/fn_ctxt/_impl.rs:136:13: no type for local variable local let tx = tx ; (hir_id=HirId { owner: DefId(0:3 ~ mutant[8787]::main), local_id: 28 })

 --> mutant.rs:6:1

  |

6 | let tx = tx ;

  | ^^^^^^^^^^^^^



thread 'rustc' panicked at 'Box<dyn Any>', /rustc/ed597e7e19d0fe716d9f81b1e840a5abbfd7c28d/compiler/rustc_errors/src/lib.rs:953:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (ed597e7e1 2021-06-08) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `main::{constant#1}`

#1 [eval_to_allocation_raw] const-evaluating + checking `main::{constant#1}`

end of query stack

error: aborting due to 5 previous errors



Some errors have detailed explanations: E0425, E0572.

For more information about an error, try `rustc --explain E0425`.

